<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_noticias2"
    tools:context=".NoticiasActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/espacio_control"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbNoticia1"
            style="@style/mi_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noticia1"
            android:textColor="@color/color3"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbNoticia2"
            style="@style/mi_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noticia2"
            android:textColor="@color/color3"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbNoticia3"
            style="@style/mi_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noticia3"
            android:textColor="@color/color3"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbNoticia4"
            style="@style/mi_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noticia4"
            android:textColor="@color/color3"
            android:textStyle="bold" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/contenedor"
        android:layout_width="386dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/espacio_control"
        android:layout_marginTop="@dimen/espacio_control"
        android:layout_marginEnd="@dimen/espacio_control"
        android:layout_marginBottom="@dimen/espacio_control"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>